Add Katie's bio and update branding to Heartroot

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katie Tudor</title>
+    <title>Heartroot — Katie Tudor</title>
+    <meta name="description" content="Pottery, ceramics, and mixed media art by Katie Tudor. Based in White Lake, Michigan.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">Katie Tudor</a>
+            <a href="/" class="logo">Heartroot</a>
             <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -19,23 +21,37 @@
 
     <main>
         <section id="hero">
-            <h1>Katie Tudor</h1>
-            <p>Welcome to my website.</p>
+            <h1>Heartroot</h1>
+            <p class="tagline">Pottery & Mixed Media by Katie Tudor</p>
         </section>
 
         <section id="about">
             <h2>About</h2>
-            <p>Coming soon.</p>
+            <div class="bio">
+                <p>I’m Katie Tudor, an artist based in White Lake, Michigan. I’ve been creating my whole life — it’s just how I process the world.</p>
+
+                <p>My work lives somewhere between pottery and mixed media. I make things with my hands — clay, paint, whatever the piece needs. A lot of what I create comes from the idea of breaking and rebuilding. Things crack. Things fall apart. But that’s not where the story ends.</p>
+
+                <p>I’m drawn to kintsugi — the Japanese practice of repairing broken ceramics with gold. Not hiding the damage, but honoring it. Making the break part of the beauty. That philosophy runs through everything I do, whether it’s a vessel on the wheel or paint on canvas.</p>
+
+                <p>Heartroot is where all of that lives. The root of it. The heart of it.</p>
+            </div>
+        </section>
+
+        <section id="work">
+            <h2>Work</h2>
+            <p class="placeholder">Gallery coming soon.</p>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Coming soon.</p>
+            <p>Want to connect, collaborate, or ask about a piece?</p>
+            <p>Reach out at <a href="mailto:hello@heartroot.art">hello@heartroot.art</a></p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2026 Katie Tudor. All rights reserved.</p>
+        <p>&copy; 2026 Katie Tudor — Heartroot</p>
     </footer>
 
     <script src="js/main.js"></script>
