Update contact email to Katie's Gmail

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>Want to connect, collaborate, or ask about a piece?</p>
-            <p>Reach out at <a href="mailto:hello@heartroot.art">hello@heartroot.art</a></p>
+            <p>Reach out at <a href="mailto:katiejjca@gmail.com">katiejjca@gmail.com</a></p>
         </section>
     </main>
 
