Add real gallery photos + Katie portrait in About section

--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
                 <span class="section-label">About</span>
                 <h2>The Artist</h2>
             </div>
-            <div class="bio">
-                <p>I'm Katie Tudor, an artist based in White Lake, Michigan. I've been creating my whole life — it's just how I process the world.</p>
+            <div class="about-content">
+                <div class="about-photo">
+                    <img src="images/katie-at-wheel.jpg" alt="Katie Tudor at her pottery wheel" loading="lazy">
+                </div>
+                <div class="bio">
+                    <p>I'm Katie Tudor, an artist based in White Lake, Michigan. I've been creating my whole life — it's just how I process the world.</p>
 
-                <p>My work lives somewhere between pottery and mixed media. I make things with my hands — clay, paint, whatever the piece needs. A lot of what I create comes from the idea of breaking and rebuilding. Things crack. Things fall apart. But that's not where the story ends.</p>
+                    <p>My work lives somewhere between pottery and mixed media. I make things with my hands — clay, paint, whatever the piece needs. A lot of what I create comes from the idea of breaking and rebuilding. Things crack. Things fall apart. But that's not where the story ends.</p>
 
-                <p>I'm drawn to kintsugi — the Japanese practice of repairing broken ceramics with gold. Not hiding the damage, but honoring it. Making the break part of the beauty. That philosophy runs through everything I do, whether it's a vessel on the wheel or paint on canvas.</p>
+                    <p>I'm drawn to kintsugi — the Japanese practice of repairing broken ceramics with gold. Not hiding the damage, but honoring it. Making the break part of the beauty. That philosophy runs through everything I do, whether it's a vessel on the wheel or paint on canvas.</p>
 
-                <p class="bio-closing">Heartroot is where all of that lives. The root of it. The heart of it.</p>
+                    <p class="bio-closing">Heartroot is where all of that lives. The root of it. The heart of it.</p>
+                </div>
             </div>
         </section>
 
@@ -65,37 +70,33 @@
                 <span class="section-label">Work</span>
                 <h2>Gallery</h2>
             </div>
-            <div class="gallery-preview">
-                <div class="placeholder-grid">
-                    <div class="placeholder-item">
-                        <div class="placeholder-inner">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1">
-                                <circle cx="12" cy="12" r="10"/>
-                                <path d="M12 2C12 2 14 6 14 12C14 18 12 22 12 22"/>
-                                <path d="M12 2C12 2 10 6 10 12C10 18 12 22 12 22"/>
-                            </svg>
-                            <span>Ceramics</span>
-                        </div>
+            <div class="gallery">
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="images/sculpture-creatures.jpg" alt="Ceramic sculpture with sculpted creatures and flowing forms" loading="lazy">
+                        <div class="gallery-caption">Ceramic Sculpture</div>
                     </div>
-                    <div class="placeholder-item">
-                        <div class="placeholder-inner">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1">
-                                <rect x="3" y="3" width="18" height="18" rx="2"/>
-                                <path d="M3 15L9 9L13 13L18 8L21 11"/>
-                            </svg>
-                            <span>Paintings</span>
-                        </div>
+                    <div class="gallery-item">
+                        <img src="images/gold-pendant.jpg" alt="Gold pendant with flowing organic design" loading="lazy">
+                        <div class="gallery-caption">Gold Pendant</div>
                     </div>
-                    <div class="placeholder-item">
-                        <div class="placeholder-inner">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1">
-                                <path d="M12 2L15 8L22 9L17 14L18 21L12 18L6 21L7 14L2 9L9 8Z"/>
-                            </svg>
-                            <span>Mixed Media</span>
-                        </div>
+                    <div class="gallery-item">
+                        <img src="images/vessel-midnight.jpg" alt="Small vessel with deep midnight blue glaze" loading="lazy">
+                        <div class="gallery-caption">Midnight Vessel</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/wall-pocket.jpg" alt="Wall pocket with opalescent blue and mauve glaze" loading="lazy">
+                        <div class="gallery-caption">Wall Pocket</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/fossil-platter.jpg" alt="Platter with impressed fossil forms in bronze glaze" loading="lazy">
+                        <div class="gallery-caption">Fossil Platter</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/wall-sculpture-green.jpg" alt="Wall sculpture in green and bronze metallic glaze" loading="lazy">
+                        <div class="gallery-caption">Wall Sculpture</div>
                     </div>
                 </div>
-                <p class="gallery-note">New work in progress on the wheel — gallery coming soon.</p>
             </div>
         </section>
 
