Brand identity: Vine & Hearth palette, Lora font, vine dividers, gallery categories, expanded philosophy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Pottery, ceramics, and mixed media art by Katie Tudor. Based in White Lake, Michigan.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -32,10 +32,10 @@
         <!-- Hero -->
         <section id="hero">
             <div class="hero-content">
-                <p class="hero-pre">Pottery &amp; Mixed Media</p>
+                <p class="hero-pre">Clay, Gold &amp; Growing Things</p>
                 <h1>Heartroot</h1>
                 <p class="tagline">Art by Katie Tudor</p>
-                <div class="hero-line"></div>
+                <img src="images/vine-divider.svg" alt="" class="hero-vine" aria-hidden="true">
                 <p class="hero-location">White Lake, Michigan</p>
             </div>
         </section>
@@ -62,7 +62,7 @@
             </div>
         </section>
 
-        <div class="section-divider"><span class="divider-symbol">&#9672;</span></div>
+        <div class="section-divider"><img src="images/vine-divider.svg" alt="" class="vine-divider" aria-hidden="true"></div>
 
         <!-- Work -->
         <section id="work">
@@ -71,36 +71,45 @@
                 <h2>Gallery</h2>
             </div>
             <div class="gallery">
+                <h3 class="gallery-category">Growing Things</h3>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="images/sculpture-creatures.jpg" alt="Ceramic sculpture with sculpted creatures and flowing forms" loading="lazy">
-                        <div class="gallery-caption">Ceramic Sculpture</div>
+                        <img src="images/sculpture-creatures.jpg" alt="Ceramic sculpture with sculpted creatures climbing flowing forms" loading="lazy">
+                        <div class="gallery-caption">Creatures Ascending</div>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/gold-pendant.jpg" alt="Gold pendant with flowing organic design" loading="lazy">
-                        <div class="gallery-caption">Gold Pendant</div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/vessel-midnight.jpg" alt="Small vessel with deep midnight blue glaze" loading="lazy">
-                        <div class="gallery-caption">Midnight Vessel</div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/wall-pocket.jpg" alt="Wall pocket with opalescent blue and mauve glaze" loading="lazy">
-                        <div class="gallery-caption">Wall Pocket</div>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="images/fossil-platter.jpg" alt="Platter with impressed fossil forms in bronze glaze" loading="lazy">
-                        <div class="gallery-caption">Fossil Platter</div>
+                        <img src="images/wall-pocket.jpg" alt="Wall pocket with opalescent blue and mauve botanical glaze" loading="lazy">
+                        <div class="gallery-caption">Wall Pocket — Opalescent</div>
                     </div>
                     <div class="gallery-item">
                         <img src="images/wall-sculpture-green.jpg" alt="Wall sculpture in green and bronze metallic glaze" loading="lazy">
-                        <div class="gallery-caption">Wall Sculpture</div>
+                        <div class="gallery-caption">Wall Sculpture — Verde</div>
+                    </div>
+                </div>
+
+                <h3 class="gallery-category">Fire &amp; Night</h3>
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="images/vessel-midnight.jpg" alt="Small vessel with deep midnight blue galaxy glaze" loading="lazy">
+                        <div class="gallery-caption">Midnight Vessel</div>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/fossil-platter.jpg" alt="Platter with impressed fossil forms in bronze and copper glaze" loading="lazy">
+                        <div class="gallery-caption">Fossil Platter</div>
+                    </div>
+                </div>
+
+                <h3 class="gallery-category">Gold &amp; Mending</h3>
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="images/gold-pendant.jpg" alt="Art nouveau gold pendant with flowing organic wolf design" loading="lazy">
+                        <div class="gallery-caption">Gold Pendant — Wolf</div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <div class="section-divider"><span class="divider-symbol">&#9672;</span></div>
+        <div class="section-divider"><img src="images/vine-divider.svg" alt="" class="vine-divider" aria-hidden="true"></div>
 
         <!-- Philosophy -->
         <section id="philosophy">
@@ -116,12 +125,13 @@
                 <div class="philosophy-text">
                     <p>Kintsugi is the Japanese art of repairing broken pottery with lacquer mixed with gold. Rather than disguising the damage, it treats the breakage as part of the object's history — something to illuminate, not hide.</p>
                     <p>This isn't just a technique. It's a way of seeing. Every crack is a story. Every repair is a choice to keep going. The gold doesn't erase what happened — it says <em>this is where I broke, and this is where I'm beautiful.</em></p>
-                    <p>That's what Heartroot is about.</p>
+                    <p>A vine doesn't just climb a wall — it finds the cracks and grows into them. That's nature doing kintsugi. Gold fills the cracks in broken pottery. Green fills the cracks in stone. Same impulse. Life insisting on the broken places.</p>
+                    <p class="philosophy-closing">That's what Heartroot is. The root of it. The heart of it. The part that keeps growing no matter what.</p>
                 </div>
             </div>
         </section>
 
-        <div class="section-divider"><span class="divider-symbol">&#9672;</span></div>
+        <div class="section-divider"><img src="images/vine-divider.svg" alt="" class="vine-divider" aria-hidden="true"></div>
 
         <!-- Contact -->
         <section id="contact">
@@ -130,7 +140,7 @@
                 <h2>Get In Touch</h2>
             </div>
             <div class="contact-content">
-                <p>Want to connect, collaborate, or ask about a piece?</p>
+                <p>Whether you're interested in a piece, want to talk about a commission, or just want to say hello — I'd love to hear from you.</p>
                 <a href="mailto:katiejjca@gmail.com" class="contact-email">katiejjca@gmail.com</a>
                 <p class="contact-location">White Lake, Michigan</p>
             </div>
@@ -139,6 +149,7 @@
 
     <footer>
         <div class="footer-content">
+            <img src="images/vine-footer.svg" alt="" class="footer-vine" aria-hidden="true">
             <div class="footer-logo">Heartroot</div>
             <p>&copy; 2026 Katie Tudor</p>
         </div>
