Add Katie's new main photo (cropped and optimized)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="about-content">
                 <div class="about-photo">
-                    <img src="images/katie-at-wheel.jpg" alt="Katie Tudor at her pottery wheel" loading="lazy">
+                    <img src="images/katie-hero.jpg" alt="Katie Tudor" loading="lazy">
                 </div>
                 <div class="bio">
                     <p>I'm Katie Tudor, an artist based in White Lake, Michigan. I've been creating my whole life — it's just how I process the world.</p>
